Reformat, update css